small html css updates to fix appearance of per round legendary action counter on mobile

--- a/server/public/css/custom.css
+++ b/server/public/css/custom.css
@@ -286,7 +286,7 @@ button.create-continue {
   position: absolute;
   top: -2px;
   right: 7px;
-  width: 20%;
+  width: 25%;
   font-size: 14px;
 }
 
